ref: name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "osyacat.entitasecs",
+	"name": "com.osyacat.entitasecs",
 	"version": "1.0.0",
 	"displayName": "Entitas Ecs",
 	"description": "",
