upd: author name

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"keywords": ["ecs","library","utility"],
 	"author": {
-		"name": "Vladimir Sazonov",
+		"name": "Osyacat",
 		"email": "vova.sazonovvv@gmail.com",
 		"url": "https://ticvote.com"
 	}
